--- a/css/main.scss
+++ b/css/main.scss
@@ -43,3 +43,5 @@ $phones: 480px;
 @import "./blocks/socials.scss";
 @import "./blocks/slider.scss";
 @import "./blocks/burger.scss";
+@import "./blocks/success-order.scss";
+@import "./blocks/failed-order.scss";
