--- a/css/blocks/_menu-acco.scss
+++ b/css/blocks/_menu-acco.scss
@@ -8,13 +8,17 @@
   position: relative;
   color: $white;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
 }
+
 
 .menu-acco__title {
   margin: rem(100px) 0 0 rem(100px);
   color: $white;
-  display: block;
+  display: inline-block;
+  display: flex;
+  justify-content: flex-start;
+  flex: 1;
 
   @include phones {
     margin: rem(40px) 0 0 rem(40px);
@@ -49,21 +53,28 @@
   width: rem(80px);
   align-items: flex-end;
   position: relative;
-  
 }
 
 .menu-acco__item--active {
   .menu-acco__desc {
     width: rem(550px);
     padding: 10% 6% 25%;
+    transition: 0.5s;
+
+    @include tablets {
+      width: 100%;
+      // max-width: rem(610px);
+    }
   }
 
-  @include tablets {
-    width: 0;
+  .menu-acco__item-title {
+    color: $yellow;
   }
+  
 }
 
 .menu-acco__desc {
+  transition: 0s;
   width: 0;
   line-height: 2;
   font-size: rem(14px);
@@ -72,3 +83,5 @@
   background-color: rgba($color: #2f3133, $alpha: .93);
   overflow: hidden;
 }
+
+
