--- a/css/layout/_layout.scss
+++ b/css/layout/_layout.scss
@@ -5,6 +5,9 @@ body {
 
 html {
   font-size: 16px;
+  // @include phones {
+  //   font-size: 13px;
+  // }
 }
 
 body {
@@ -30,7 +33,10 @@ body {
 
 .section {
   height: 100vh;
-  // min-height: 650px;
+  
+  @include tablets {
+    min-height: 100vh;
+  }
   
 }
 
